# test

./: .gitignore  1  1.txt  2.rb  2.txt  2007.py  3.txt  4  4.txt  5  5.txt  AboutJava.java  Jakefile  JavaArgs.java  Makefile  README.md  UnixTime.java  ali.sh  ali.sh.txt  ami.sh  arch.html  arch.sh  arch_linux_install  arch_linux_install.txt  arch_linux_install_1.sh  arch_linux_install_2.sh  arch_linux_install_test.sh  arch_linux_install_test.txt  arith-loop  aur_packages_sort.txt  aurman_install.sh  backup_setup  basename  bin_calc.cpp  bitleft  bmi.cpp  bookmarks.html  c_args.c  calc.c  calc.cpp  (+128 more)
.github/workflows/: electron_app.yml  test_gtk_app.yml
Old/: 1.cpp  2  3  4.rb  5.rb  bitleft  compile.txt  easter  fdisk.txt  installer  pacman.txt  sys_info_page  updater
cgi-bin/: app.py  cookie.py  form.py  hello.py
electron_app/: electron_guide.txt  index.html  lib.js  main.css  main.js  main_js.js  package.json  preload.js  render.js  renderer.js  system_info.html
mtproto/: .replit  mtproxy.js  package.json
notepad/: CMakeLists.txt  config.h  main.cpp  notepad.cpp  notepad.h  notepad.pro  notepad.qrc  notepad.rc  notepad.ui  readme.txt  version.h
